--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/filecomplaint.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/filecomplaint.html
@@ -54,8 +54,22 @@
                 <div class="col-md-6" style="margin: auto;">
                     <div class="row" id="nomargin">
                         <div class="col-md-12" id="fname">
-                            <label for="inputFname" class="form-label">Full Name</label>
+                            <label for="inputFname" class="form-label">Offender's Name</label>
                             <input name= "inputName" type="text" class="form-control" id="inputFname" placeholder="John Doe"
+                            aria-label="Offender First Name" required>
+                        </div>
+                    </div>
+                    <div class="row" id="nomargin">
+                        <div class="col-md-12" id="fname">
+                            <label for="nameComplainant" class="form-label">Complainant's Name</label>
+                            <input name= "nameComplainant" type="text" class="form-control" id="nameComplainant" placeholder="John Doe"
+                            aria-label="Offender First Name" required>
+                        </div>
+                    </div>
+                    <div class="row" id="nomargin">
+                        <div class="col-md-12" id="emailComplainant">
+                            <label for="emailComplainant" class="form-label">Complainant's Email</label>
+                            <input name= "emailComplainant" type="text" class="form-control" id="emailComplainant" placeholder="complainant@email.com"
                             aria-label="Offender First Name" required>
                         </div>
                     </div>
