--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookup.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookup.html
@@ -111,6 +111,7 @@
               <th scope="col">Gender</th>
               <th scope="col">Offense</th>
               <th scope="col">Case Status</th>
+              <th scope="col">Complainant</th>
               <th scope="col">Date of Complaint</th>
               <th scope="col">Action</th>
               
@@ -127,6 +128,7 @@
                 <td>{{items.gender}}</td>
                 <td>{{items.offense}}</td>
                 <td>{{items.caseStatus}}</td>
+                <td>{{items.complainant}}</td>
                 <td>{{items.datenow}}</td>
                 <td>
                   <button name="submitBtn" value="{{items.id}}" type="submit" class="btn btn-primary">View Details </button>
