--- a/HTML Wireframe/djangoProject/offenderLocatorApp/static/css/styles.css
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/static/css/styles.css
@@ -13,21 +13,21 @@ button{
 h1, h2, h3, h4, li{
     margin: 2% auto;
     font-family: 'Montserrat', sans-serif;
-    color: #000000;
+    color: #EEEEEE;
 }
 
-h1:hover, h2:hover, h3:hover, h4:hover, li:hover{
+/* h1:hover, h2:hover, h3:hover, h4:hover, li:hover{
     margin: 2% auto;
     font-family: 'Montserrat', sans-serif;
     color: #151515;
-}
+} */
 
-input.form-control, textarea.form-control{
+input.form-control, textarea.form-control, select.form-control{
     background-color: #151515;
     color: #EEEEEE;
 }
 
-input.form-control:focus, textarea.form-control:focus{
+input.form-control:focus, textarea.form-control:focus, select.form-control:focus{
     background-color: #151515;
     color: #EEEEEE;
     border-color: #EEEEEE;
@@ -39,9 +39,13 @@ ul.navbar-nav.ms-auto.text-center{
     padding: 0%;
 }
 
-a:hover{
+/* a:hover{
     text-decoration: none;
     background-color: #A9333A;
+} */
+
+label{
+    color: #EEEEEE;
 }
 
 nav[class="navbar sticky-top navbar-expand-lg navbar-dark"]{
@@ -67,13 +71,21 @@ p{
     color: #EEEEEE;
 }
 
-p:hover{
+table[class="table table-hover"]{
+    background-color: #151515;
+    color: #EEEEEE;
+}
+
+.table-hover tbody tr:hover td, .table-hover tbody tr:hover th{
+    color: #00e1ff;
+}
+/* p:hover{
     margin: 2% auto;
     font-family: 'Roboto', sans-serif;
     font-size: 1rem;
     font-weight: bolder;
     color: #151515;
-}
+} */
 
 .btn-outline-dark{
     border-color: #EEEEEE;
@@ -81,7 +93,7 @@ p:hover{
 }
 
 .btn.btn-outline-dark:hover{
-    background-color: #151515;
+    background-color: #24b938;
 }
 
 .col-md-4, .col-md-6, .col-md-8, .col-md-10, .col-md-12{
@@ -116,7 +128,7 @@ p:hover{
 #age:focus-within label, #gender:focus-within label, 
 #offense:focus-within label, #casedetails:focus-within label,
 #lookupfname:focus-within label, #lookuplname:focus-within label,
-#lookupoffenderid:focus-within label, #loginpassword:focus-within label, #loginconfirm:focus-within label
+#lookupoffenderid:focus-within label, #loginpassword:focus-within label, #loginconfirm:focus-within label, #loginusername:focus-within label
 {
-    color: #EEEEEE;
+    color: #ffc400;
 }
