--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/accountmanager.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/accountmanager.html
@@ -15,7 +15,7 @@
   
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   
-  <title>Offender Locator Admin Lookup</title>
+  <title>Admin - Account Manager</title>
   <style>
 
   body, html{
@@ -33,7 +33,7 @@
   </style>
 </head>
   <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
       <a class="navbar-brand">Offender Locator</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hamburger" 
           aria-controls="hamburger" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,6 +43,7 @@
         <ul class="navbar-nav ms-auto text-center">
           <li><a class="nav-link" href="/admin_lookup">Offenders</a></li>
           <li><a class="nav-link" href="/filecomplaint">File a complaint</a></li>
+          <li><a class="nav-link" href="/schedule">Schedule</a></li>
           <li><a class="nav-link" href="/account_manager">Account Manager</a></li>
           <div class="btn-group">
             <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
@@ -77,7 +78,7 @@
 
   <div class="card-body">
     <div class="table-editable">
-      <table class="table table-dark table-striped" id="adminTable"> 
+      <table class="table table-hover" id="adminTable"> 
         <thead>
           <tr>
             <th class="text-center">Username</th>
