--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/viewdetails.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/viewdetails.html
@@ -10,11 +10,11 @@
     <title>Case Details</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
-<!-- <style type="text/css" media="print">
+<style type="text/css" media="print">
     @page { 
         size: landscape;
     }
-</style> -->
+</style>
 <body>
 
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
